--- a/projects/angular-d3-cloud/package.json
+++ b/projects/angular-d3-cloud/package.json
@@ -4,8 +4,8 @@
   "description": "D3 word cloud component for Angular built upon d3-cloud",
   "version": "1.1.1",
   "peerDependencies": {
-    "@angular/common": "^11.0.9",
-    "@angular/core": "^11.0.9"
+    "@angular/common": "~13.3.11",
+    "@angular/core": "~13.3.11"
   },
   "devDependencies": {
     "@types/d3-cloud": "^1.2.3"
